--- a/pages/card-template.html
+++ b/pages/card-template.html
@@ -33,3 +33,54 @@
 
   <p class="product-card__price">2.499.000đ</p>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+<li class="header__cart-item">
+  <img
+    src="./assets/imgs/home/mock-product-2.webp"
+    alt="Product image"
+    class="header__cart-item-img"
+  />
+
+  <div class="header__cart-item-body">
+    <div class="header__cart-item-infor">
+      <a href="" class="header__cart-item-name">
+        Chuột không dây siêu nhẹ Pulsar X2 Wireless Aim Trainer Pack (Limited
+        Edition)
+      </a>
+      <div class="header__cart-item-price-wrapper">
+        <span class="header__cart-item-total-price">2.499.000đ</span>
+        <span class="header__cart-item-product-price">2.499.000đ</span>
+      </div>
+      <span class="header__cart-item-total-quantity">Còn lại: 8</span>
+    </div>
+
+    <div class="header__cart-item-control">
+      <div class="header__cart-item-quantity-wrapper">
+        <button
+          class="header__cart-item-quantity-control-btn header__cart-item-quantity-decrease-btn"
+        >
+          <i class="bi bi-dash"></i>
+        </button>
+
+        <span class="header__cart-item-quantity-num">1</span>
+
+        <button
+          class="header__cart-item-quantity-control-btn header__cart-item-quantity-increase-btn"
+        >
+          <i class="bi bi-plus"></i>
+        </button>
+      </div>
+      <button class="header__cart-item-remove-btn">Bỏ</button>
+    </div>
+  </div>
+</li>
