collection page use product card factory

--- a/product-detail.html
+++ b/product-detail.html
@@ -73,221 +73,7 @@
       <div class="padding-header"></div>
 
       <!-- Section product detail -->
-      <section class="prod-detail">
-        <div class="grid wide">
-          <!-- Main -->
-          <div class="prod-detail-main">
-            <div class="row">
-              <div class="col l-7 m-12 c-12">
-                <div class="prod-detail-main__carousel">
-                  <div class="prod-detail-main__carousel-list-wrapper">
-                    <ul class="prod-detail-main__carousel-list">
-                      <li
-                        class="prod-detail-main__carousel-item prod-detail-main__carousel-item--active"
-                      >
-                        <img
-                          src="./assets/imgs/home/mock-product-2.webp"
-                          alt="Product image"
-                          class="prod-detail-main__carousel-img"
-                        />
-                      </li>
-
-                      <li class="prod-detail-main__carousel-item">
-                        <img
-                          src="./assets/imgs/home/mock-product-3.webp"
-                          alt="Product image"
-                          class="prod-detail-main__carousel-img"
-                        />
-                      </li>
-
-                      <li class="prod-detail-main__carousel-item">
-                        <img
-                          src="./assets/imgs/home/mock-product.webp"
-                          alt="Product image"
-                          class="prod-detail-main__carousel-img"
-                        />
-                      </li>
-
-                      <li class="prod-detail-main__carousel-item">
-                        <img
-                          src="./assets/imgs/home/mock-product.webp"
-                          alt="Product image"
-                          class="prod-detail-main__carousel-img"
-                        />
-                      </li>
-
-                      <li class="prod-detail-main__carousel-item">
-                        <img
-                          src="./assets/imgs/home/mock-product.webp"
-                          alt="Product image"
-                          class="prod-detail-main__carousel-img"
-                        />
-                      </li>
-                      <li class="prod-detail-main__carousel-item">
-                        <img
-                          src="./assets/imgs/home/mock-product.webp"
-                          alt="Product image"
-                          class="prod-detail-main__carousel-img"
-                        />
-                      </li>
-                      <li class="prod-detail-main__carousel-item">
-                        <img
-                          src="./assets/imgs/home/mock-product.webp"
-                          alt="Product image"
-                          class="prod-detail-main__carousel-img"
-                        />
-                      </li>
-                    </ul>
-
-                    <div class="prod-detail-main__carousel-list-fading"></div>
-                  </div>
-
-                  <div class="prod-detail-main__carousel-main-img-wrapper-1">
-                    <div class="prod-detail-main__carousel-main-img-wrapper-2">
-                      <img
-                        src="./assets/imgs/home/mock-product-2.webp"
-                        alt=""
-                        class="prod-detail-main__carousel-main-img"
-                      />
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col l-5 m-12 c-12">
-                <div class="prod-detail-main__right-container">
-                  <span class="prod-detail-main__prod-brand">Pulsar</span>
-                  <h3 class="prod-detail-main__prod-name">
-                    Lót chuột Lamzu Energon
-                  </h3>
-
-                  <div class="prod-detail-main__prod-price-wrapper">
-                    <span class="prod-detail-main__prod-price">2.499.000₫</span>
-                    <span class="prod-detail-main__prod-star">
-                      5.0
-                      <i class="bi bi-star-fill"></i>
-                    </span>
-                  </div>
-
-                  <p class="prod-detail-main__prod-description">
-                    Phiên bản giới hạn hợp tác giữa Pulsar Hàn Quốc và
-                    Youtuber/Tech Reviewer RandomfrankP. Giới hạn chỉ 1500 chiếc
-                    toàn cầu mỗi loại.
-                  </p>
-
-                  <span class="prod-detail-main__prod-designed-country"
-                    >Designed in Korea</span
-                  >
-                  <span class="prod-detail-main__prod-warranty"
-                    >Bảo hành: 24 tháng đổi mới</span
-                  >
-
-                  <div class="prod-detail-main__prod-quantity-wrapper">
-                    <span class="prod-detail-main__prod-quantity-text"
-                      >Số lượng:</span
-                    >
-
-                    <div class="prod-detail-main__prod-quantity-control">
-                      <button
-                        class="prod-detail-main__prod-quantity-decrease-btn"
-                      >
-                        <i class="bi bi-dash"></i>
-                      </button>
-                      <span class="prod-detail-main__prod-quantity-num">1</span>
-                      <button
-                        class="prod-detail-main__prod-quantity-increase-btn"
-                      >
-                        <i class="bi bi-plus"></i>
-                      </button>
-                    </div>
-                  </div>
-
-                  <div class="prod-detail-main__prod-quantity-status">
-                    <div
-                      class="prod-detail-main__prod-quantity-status-available"
-                    >
-                      <i class="bi bi-check-circle-fill"></i>
-                      Còn lại 8 sản phẩm
-                    </div>
-                    <div class="prod-detail-main__prod-quantity-status-soldout">
-                      <i class="bi bi-exclamation-diamond-fill"></i>
-                      Hết hàng
-                    </div>
-                  </div>
-
-                  <button
-                    class="btn btn-primary prod-detail-main__add-cart-btn"
-                  ></button>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Information & Detail -->
-          <div class="prod-detail-info-and-detail">
-            <div class="row">
-              <div class="col l-6 m-12 c-12">
-                <div class="prod-detail-info">
-                  <h4 class="prod-detail-info__subtitle">
-                    Lót chuột Lamzu Energon
-                  </h4>
-                  <h3
-                    class="prod-detail-info__title gradient-text-primary-color-light"
-                  >
-                    Một lần nữa, Lamzu phá bỏ mọi định luật về sản phẩm tốt trên
-                    mức giá tốt bất ngờ
-                  </h3>
-                  <p class="prod-detail-info__description">
-                    Không là ngoại lệ với các sản phẩm Lamzu từ trước đến nay,
-                    Lamzu Energon là mẫu lót chuột mới nhất của hãng sẵn sàng
-                    thổi tung mọi đối thủ với chất lượng tuyệt vời nhưng mức giá
-                    chỉ dưới 1 triệu đồng. Bằng việc ứng dụng nhiều vật liệu
-                    mới, Lamzu Energon mang đến tốc độ lướt chuột siêu nhanh
-                    nhưng không hề nhám như các loại lót chuột hybrid khác. Phần
-                    cánh tay của bạn sẽ được nâng niu, chăm sóc một cách dễ chịu
-                    với mặt vải mới không gây kích ứng da từ Lamzu.
-                  </p>
-                </div>
-              </div>
-
-              <div class="col l-6 m-12 c-12">
-                <div class="prod-detail-detail">
-                  <ul class="prod-detail-detail__list">
-                    <li class="prod-detail-detail__item">
-                      <span class="prod-detail-detail__item-title"
-                        >Chất liệu bề mặt</span
-                      >
-                      <span class="prod-detail-detail__item-detail"
-                        >Cloth - Được mix giữa sợi Nylon và Lycra</span
-                      >
-                    </li>
-                    <li class="prod-detail-detail__item">
-                      <span class="prod-detail-detail__item-title"
-                        >Chất liệu đế</span
-                      >
-                      <span class="prod-detail-detail__item-detail"
-                        >Soft SCR siêu bám bàn</span
-                      >
-                    </li>
-                    <li class="prod-detail-detail__item">
-                      <span class="prod-detail-detail__item-title"
-                        >Kích thước</span
-                      >
-                      <span class="prod-detail-detail__item-detail"
-                        >480 x 410 x 4mm</span
-                      >
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Significant attributes -->
-          <div class="prod-detail-significant">
-            
-          </div>
-        </div>
-      </section>
+      <section class="prod-detail"></section>
 
       <!-- Secton you might also like -->
       <section class="prod-detail__also-like">
@@ -454,6 +240,7 @@
       import { renderHeader } from './assets/js/commons/header/header.js';
       import { renderFooter } from './assets/js/commons/footer.js';
       import { renderProductDetail } from './assets/js/product-detail/section-product-detail.js';
+      import { renderAlsoLike } from './assets/js/product-detail/section-also-like.js';
 
       const header = document.querySelector('header.header');
       renderHeader(header, false);
@@ -461,8 +248,11 @@
       const footer = document.querySelector('footer.footer');
       renderFooter(footer);
 
-      const productDetailDOMElement = document.querySelector('.prod-detail');
-      renderProductDetail(productDetailDOMElement)
+      const productDetailDOMNode = document.querySelector('.prod-detail');
+      renderProductDetail(productDetailDOMNode);
+
+      const alsoLikeDOMNode = document.querySelector('.prod-detail__also-like');
+      renderAlsoLike(alsoLikeDOMNode);
     </script>
   </body>
 </html>
