--- a/admin/user.html
+++ b/admin/user.html
@@ -28,11 +28,65 @@
         <div class="content">
             <div class="title">User</div>
             <div class="search-bar"></div>
+            <div class="table">
+                <!-- <table class="data">
+                    <thead>
+                        <th style="width: 5%">ID</th>
+                        <th>Email</th>
+                        <th style="width: 20%">First Name</th>
+                        <th style="width: 20%">Last Name</th>
+                        <th style="width: 80px">Edit</th>
+                        <th style="width: 80px">Delete</th>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>myname@gmail.com</td>
+                            <td>My</td>
+                            <td>Name</td>
+                            <td><button class="edit"><i class="fa fa-edit"></i></button></td>
+                            <td><button class="delete"><i class="fa fa-trash"></i></button></td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>myname@gmail.com</td>
+                            <td>My</td>
+                            <td>Name</td>
+                            <td><button class="edit"><i class="fa fa-edit"></i></button></td>
+                            <td><button class="delete"><i class="fa fa-trash"></i></button></td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>myname@gmail.com</td>
+                            <td>My</td>
+                            <td>Name</td>
+                            <td><button class="edit"><i class="fa fa-edit"></i></button></td>
+                            <td><button class="delete"><i class="fa fa-trash"></i></button></td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>myname@gmail.com</td>
+                            <td>My</td>
+                            <td>Name</td>
+                            <td><button class="edit"><i class="fa fa-edit"></i></button></td>
+                            <td><button class="delete"><i class="fa fa-trash"></i></button></td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>myname@gmail.com</td>
+                            <td>My</td>
+                            <td>Name</td>
+                            <td><button class="edit"><i class="fa fa-edit"></i></button></td>
+                            <td><button class="delete"><i class="fa fa-trash"></i></button></td>
+                        </tr>
+                    </tbody>
+                </table> -->
+            </div>
         </div>
     </div>
 
     <script type="module">
-        import { renderNavbar, renderSearchbar } from '/assets/js/commons/adminNav.js'
+        import { renderNavbar, renderSearchbar } from '/assets/js/admin/adminNav.js'
   
         const nav = document.querySelector('div.navbar');
         renderNavbar(nav);
