fetch product from server for colletion page + product detail page

--- a/collections.html
+++ b/collections.html
@@ -224,10 +224,10 @@
                     Thứ tự bảng chữ cái (A-Z)
                   </option>
                   <option value="zToA">Thứ tự bảng chữ cái (Z-A)</option>
-                  <option value="increasingPrice">Giá (thấp đến cao)</option>
-                  <option value="decreasingPrice">Giá (cao đến thấp)</option>
-                  <option value="newestToOldest">Ngày (mới đến cũ)</option>
-                  <option value="oldestToNewest">Ngày (cũ đến mới)</option>
+                  <option value="increasingPrice">Giá (tăng dần)</option>
+                  <option value="decreasingPrice">Giá (giảm dần)</option>
+                  <option value="newestToOldest">Ngày (mới nhất)</option>
+                  <option value="oldestToNewest">Ngày (cũ nhất)</option>
                 </select>
               </div>
             </div>
@@ -238,6 +238,9 @@
             <!-- Product list -->
             <ul class="collection__product-list"></ul>
           </div>
+
+          <!-- Pagination -->
+          <div class="collection__pagination"></div>
         </div>
       </div>
 
