--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               <div class="col l-2-4 m-4 c-6">
                 <li class="under-top__category-item">
                   <a
-                    href="./collections.html?collectionId=1"
+                    href="./collections.html?categories=keyboard"
                     class="under-top__category-item-link"
                   >
                     <img
@@ -122,7 +122,10 @@
 
               <div class="col l-2-4 m-4 c-6">
                 <li class="under-top__category-item">
-                  <a href="" class="under-top__category-item-link">
+                  <a
+                    href="./collections.html?categories=mouse"
+                    class="under-top__category-item-link"
+                  >
                     <img
                       class="under-top__category-item-img"
                       src="./assets/imgs/home/under-top-category-2.webp"
@@ -134,7 +137,10 @@
               </div>
               <div class="col l-2-4 m-4 c-6">
                 <li class="under-top__category-item">
-                  <a href="" class="under-top__category-item-link">
+                  <a
+                    href="./collections.html?categories=pad"
+                    class="under-top__category-item-link"
+                  >
                     <img
                       class="under-top__category-item-img"
                       src="./assets/imgs/home/under-top-category-3.webp"
@@ -178,7 +184,9 @@
               <div class="row">
                 <div class="col l-2-4 m-4 c-6">
                   <li class="under-top__brand-item">
-                    <a href="" class="under-top__brand-item-link"
+                    <a
+                      href="./collections.html?brands=filco"
+                      class="under-top__brand-item-link"
                       ><img
                         class="under-top__brand-item-img"
                         src="./assets/imgs/home/under-top-brand-1.webp"
@@ -188,7 +196,9 @@
                 </div>
                 <div class="col l-2-4 m-4 c-6">
                   <li class="under-top__brand-item">
-                    <a href="" class="under-top__brand-item-link"
+                    <a
+                      href="./collections.html?brands=finalmouse"
+                      class="under-top__brand-item-link"
                       ><img
                         class="under-top__brand-item-img"
                         src="./assets/imgs/home/under-top-brand-2.webp"
@@ -198,17 +208,21 @@
                 </div>
                 <div class="col l-2-4 m-4 c-6">
                   <li class="under-top__brand-item">
-                    <a href="" class="under-top__brand-item-link"
+                    <a
+                      href="./collections.html?brands=realforce"
+                      class="under-top__brand-item-link"
                       ><img
                         class="under-top__brand-item-img"
-                        src="./assets/imgs/home/under-top-brand-3.webp"
+                        src="./assets/imgs/home/under-top-brand-3.png"
                         alt="Brand 3"
                     /></a>
                   </li>
                 </div>
                 <div class="col l-2-4 m-4 c-6">
                   <li class="under-top__brand-item">
-                    <a href="" class="under-top__brand-item-link"
+                    <a
+                      href="./collections.html?brands=lamzu"
+                      class="under-top__brand-item-link"
                       ><img
                         class="under-top__brand-item-img"
                         src="./assets/imgs/home/under-top-brand-4.webp"
@@ -218,7 +232,9 @@
                 </div>
                 <div class="col l-2-4 m-4 c-6">
                   <li class="under-top__brand-item">
-                    <a href="" class="under-top__brand-item-link"
+                    <a
+                      href="./collections.html?brands=pulsar"
+                      class="under-top__brand-item-link"
                       ><img
                         class="under-top__brand-item-img"
                         src="./assets/imgs/home/under-top-brand-5.avif"
@@ -228,7 +244,9 @@
                 </div>
                 <div class="col l-2-4 m-4 c-6">
                   <li class="under-top__brand-item">
-                    <a href="" class="under-top__brand-item-link"
+                    <a
+                      href="./collections.html?brands=ninjutso"
+                      class="under-top__brand-item-link"
                       ><img
                         class="under-top__brand-item-img"
                         src="./assets/imgs/home/under-top-brand-6.avif"
@@ -238,7 +256,9 @@
                 </div>
                 <div class="col l-2-4 m-4 c-6">
                   <li class="under-top__brand-item">
-                    <a href="" class="under-top__brand-item-link"
+                    <a
+                      href="./collections.html?brands=glorious"
+                      class="under-top__brand-item-link"
                       ><img
                         class="under-top__brand-item-img"
                         src="./assets/imgs/home/under-top-brand-7.avif"
@@ -248,7 +268,9 @@
                 </div>
                 <div class="col l-2-4 m-4 c-6">
                   <li class="under-top__brand-item">
-                    <a href="" class="under-top__brand-item-link"
+                    <a
+                      href="./collections.html?brands=lethal"
+                      class="under-top__brand-item-link"
                       ><img
                         class="under-top__brand-item-img"
                         src="./assets/imgs/home/under-top-brand-8.webp"
@@ -258,7 +280,9 @@
                 </div>
                 <div class="col l-2-4 m-4 c-6">
                   <li class="under-top__brand-item">
-                    <a href="" class="under-top__brand-item-link"
+                    <a
+                      href="./collections.html?brands=skypad"
+                      class="under-top__brand-item-link"
                       ><img
                         class="under-top__brand-item-img"
                         src="./assets/imgs/home/under-top-brand-9.webp"
@@ -268,10 +292,12 @@
                 </div>
                 <div class="col l-2-4 m-4 c-6">
                   <li class="under-top__brand-item">
-                    <a href="" class="under-top__brand-item-link"
+                    <a
+                      href="./collections.html?brands=razer"
+                      class="under-top__brand-item-link"
                       ><img
                         class="under-top__brand-item-img"
-                        src="./assets/imgs/home/under-top-brand-10.webp"
+                        src="./assets/imgs/home/under-top-brand-10.png"
                         alt="Brand 10"
                     /></a>
                   </li>
