--- a/signup.html
+++ b/signup.html
@@ -1,39 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
     <!-- Reset css -->
-    <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
-    />
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Font awesome icom -->
-    <link
-        rel="stylesheet"
-        href="./assets/fonts/fontawesome-free-6.4.0-web/css/all.min.css"
-    />
+    <link rel="stylesheet" href="./assets/fonts/fontawesome-free-6.4.0-web/css/all.min.css" />
 
     <!-- Bootstrap icon -->
-    <link
-        rel="stylesheet"
-        href="./assets/fonts/bootstrap-icons-1.10.4/font/bootstrap-icons.css"
-    />
+    <link rel="stylesheet" href="./assets/fonts/bootstrap-icons-1.10.4/font/bootstrap-icons.css" />
 
     <!-- Inter Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700;900&display=swap"
-        rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700;900&display=swap"
+        rel="stylesheet" />
 
     <!-- Common components CSS -->
     <link rel="stylesheet" href="./assets/css/commons/base.css" />
@@ -41,59 +30,31 @@
     <link rel="stylesheet" href="./assets/css/commons/header.css" />
     <link rel="stylesheet" href="./assets/css/commons/footer.css" />
     <link rel="stylesheet" href="./assets/css/commons/paragraph.css" />
-
 </head>
+
 <body>
     <div class="app">
         <div class="sub-header">
             <ul class="sub-header__list">
-              <li class="sub-header__item">Miễn phí giao hàng đơn từ 1.000.000đ</li>
-              <li class="sub-header__item">Miễn phí quẹt thẻ</li>
-              <li class="sub-header__item">Hàng mới, chính hãng 100%</li>
-              <li class="sub-header__item">Giao hàng siêu tốc</li>
-              <li class="sub-header__item">Bảo hành nhanh chóng</li>
+                <li class="sub-header__item">Miễn phí giao hàng đơn từ 1.000.000đ</li>
+                <li class="sub-header__item">Miễn phí quẹt thẻ</li>
+                <li class="sub-header__item">Hàng mới, chính hãng 100%</li>
+                <li class="sub-header__item">Giao hàng siêu tốc</li>
+                <li class="sub-header__item">Bảo hành nhanh chóng</li>
             </ul>
-    
+
             <ul class="sub-header__list">
-              <li class="sub-header__item">Miễn phí giao hàng đơn từ 1.000.000đ</li>
-              <li class="sub-header__item">Miễn phí quẹt thẻ</li>
-              <li class="sub-header__item">Hàng mới, chính hãng 100%</li>
-              <li class="sub-header__item">Giao hàng siêu tốc</li>
-              <li class="sub-header__item">Bảo hành nhanh chóng</li>
+                <li class="sub-header__item">Miễn phí giao hàng đơn từ 1.000.000đ</li>
+                <li class="sub-header__item">Miễn phí quẹt thẻ</li>
+                <li class="sub-header__item">Hàng mới, chính hãng 100%</li>
+                <li class="sub-header__item">Giao hàng siêu tốc</li>
+                <li class="sub-header__item">Bảo hành nhanh chóng</li>
             </ul>
         </div>
 
         <header class="header"></header>
 
-        <section class="main-content">
-            <h1 class="text-center" style="line-height: 1.4; margin-top:80px;">Đăng ký</h1>
-
-            <div class="paragraph" style="max-width:450px;">
-                <div class="custom-input-wrapper input">
-                    <input placeholder=" " id="lastName" type="text" class="custom-input__input-text"/>
-                    <span class="custom-input__input-label">Họ</span>
-                </div>
-                <div class="custom-input-wrapper input">
-                    <input placeholder=" " id="firstName" type="text" class="custom-input__input-text"/>
-                    <span class="custom-input__input-label">Tên</span>
-                </div>
-                <div class="custom-input-wrapper input">
-                    <input placeholder=" " id="email" type="email" class="custom-input__input-text"/>
-                    <span class="custom-input__input-label">Email</span>
-                </div>
-                <div class="custom-input-wrapper input">
-                    <input placeholder=" " id="password" type="password" class="custom-input__input-text"/>
-                    <span class="custom-input__input-label">Mật khẩu</span>
-                </div>
-
-                <a href="" title="Quên mật khẩu?">Quên mật khẩu?</a>
-
-                <div class="text-center">
-                    <button class="btn btn-dark" id="signup" style="width: 100%; height: 60px">Đăng ký</button>
-                    <a href="./login.html" title="Đăng nhập">Đăng nhập</a>    
-                </div>
-            </div>
-        </section>
+        <section class="main-content"></section>
 
         <footer class="footer"></footer>
     </div>
@@ -101,38 +62,19 @@
     <script type="module">
         import { renderHeader } from './assets/js/commons/header/header.js';
         import { renderFooter } from './assets/js/commons/footer.js';
-  
+
         const header = document.querySelector('header.header');
         renderHeader(header);
 
         const footer = document.querySelector('footer.footer');
-        renderFooter(footer);  
+        renderFooter(footer);
     </script>
     <script type="module">
-        import { validateEmail, validatePassword, displayError } from './assets/js/commons/validation.js';
+        import { renderSectionRegister } from './assets/js/register/section-register.js';
+        const mainDOMNode = document.querySelector('.main-content');
 
-        const signupButton = document.getElementById('signup');
-        signupButton.addEventListener("click", function() {
-            var lastName = document.getElementById('lastName').value;
-            var firstName = document.getElementById('firstName').value;
-            var email = document.getElementById('email').value;
-            var password = document.getElementById('password').value;
-
-            if (lastName === "") {
-                displayError('Họ không được để trống.');
-            } else if (firstName === "") {
-                displayError('Tên không được để trống.');
-            }
-            else if (validateEmail(email) !== true) {
-                displayError('Wrong email format.');
-            } else if (validatePassword(password) !== true) {
-                displayError(validatePassword(password));
-            } else {
-                var error = document.querySelector('.error');
-                if (error !== null) error.remove();
-                window.location.href = './login.html';
-            }
-        });
+        renderSectionRegister(mainDOMNode);
     </script>
 </body>
+
 </html>
